--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- aside Start -->
         <div class="aside">
             <div class="logo">
-                <a href="#"><span>J</span>ahangir</a>
+                <a href="#"><div id="logo-text"><span>J</span>ahangir</div></a>
             </div>
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
@@ -396,6 +396,7 @@
     <!-- Style Switch End -->
     <!--------Js file--------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/CSSRulePlugin.min.js" integrity="sha512-oYnRsy+bFXYr+btXcKk2dpzfERnCUc5G4GkJ0AO/XSvomLV7Xc7tZVhTsYIz9QzOAw9qo/6qoA6JTpzaYuHUGg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy=""></script>
     <script src="./js/main.js"></script>
     <script src="./js/switcher.js"></script>
