--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bepari51</title>
+    <title>Jahangir BepaRi</title>
+    <link rel="shortcut icon" href="./img/new.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/colorcss/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -40,13 +41,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hello, my name is <span>Jahangir Bepari</span></h3>
+                            <h3 class="hello">Hello, my name is <div id="my-name-area"><span id="my-name">Jahangir Bepari</span></div></h3>
                             <h3 class="proffesion">I'm <span class="type"></span></h3>
                             <p>I'm a web desginer with extensive experience for over 1years.My expertise is to create and website desgin and front-end developer</p>
-                            <a href="#contact" class="btn hire me">Hire Me</a>
+                            <a href="#contact"  class="btn hire me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="./img/new.jpg" alt="">
+                            <img class="home-imgae" src="./img/new.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -78,7 +79,7 @@
                                             <p>Age:<span> 20</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Website:<span><a href="#"> Jahangir Bepari.com</a></span></p>
+                                            <p>Website:<span><a href="https://devjahangir.github.io/portfolio/?fbclid=IwAR1dtYKsca5nfMASGEfBUGI_XhGkeA1sn2spEMAHpaCLjBJlalvs7PFnR3U#contact"> Jahangir Bepari.com</a></span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Degree:<span> Diploma</span></p>
@@ -166,7 +167,7 @@
                             <div class="service-item-inner">
                                 <div class="icon">
                                     <i class="fa fa-laptop" aria-hidden="true"></i>                                </div>
-                                <h4>Front-End Dvelop</h4>
+                                <h4>Front-End Dvelopper</h4>
                                 <p>I'll develop user interface</p>
                             </div>
                         </div>        
@@ -177,8 +178,8 @@
                                 <div class="icon">
                                     <i class="fa fa-code" aria-hidden="true"></i>
                                 </div>
-                                <h4>web desgin</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                <h4>UI/XI Desgin</h4>
+                                <p>I'll desgin website user interface </p>
                             </div>
                         </div>        
                         <!---service item end----->
@@ -320,14 +321,14 @@
                          <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
                             <h4>Email</h4>
-                            <p>info@gmail.com</p>
+                            <p>dev.jahangir.bd@gmail.com</p>
                         </div>
                         <!-- Contact info item End -->
                          <!-- Contact info item start -->
                          <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-globe" aria-hidden="true"></i></div>
                             <h4>Website</h4>
-                            <p>www.domain.com</p>
+                             <a href="https://devjahangir.github.io/portfolio/?fbclid=IwAR1dtYKsca5nfMASGEfBUGI_XhGkeA1sn2spEMAHpaCLjBJlalvs7PFnR3U#contact"><p>Jahangir BepaRi</p></a>
                         </div>
                         <!-- Contact info item End -->
                     </div>
@@ -335,7 +336,7 @@
                     <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MASSAGES</h4>
                     <!---------contact form-------->
                     <div class="row">
-                        <div class="contact-form padd-15" p>
+                        <div class="contact-form padd-15">
                             <div class="row">
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
