--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <link rel="stylesheet" href="./css/colorcss/color-3.css" class="alternate-style" title="color-3" disabled>
     <link rel="stylesheet" href="./css/colorcss/color-4.css" class="alternate-style" title="color-4" disabled>
     <link rel="stylesheet" href="./css/colorcss/color-5.css" class="alternate-style" title="color-5" disabled>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("u8M4YxhkvqCcGKyTi");
+   })();
+</script>
 </head>
 <body>
     <!-- Main Container Start -->
@@ -340,32 +348,25 @@
                             <div class="row">
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
-                                        <input type="name" class="form-control" placeholder="Name">
+                                        <input type="name" class="form-control" id="nam" placeholder="Name">
                                     </div>
                                 </div>
                                 <div class="form-item col-6 padd-15">
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email" >
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-item col-6 padd-15">
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Subject" >
-                                    </div>
+                                        <input type="email" class="form-control" id="email" placeholder="Email" >
+                                    </div> 
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
                                     <div class="form-group">
-                                        <textarea id="" class="form-control" placeholder="Message"></textarea>
+                                        <textarea id="message" class="form-control" placeholder="Message"></textarea>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
-                                    <button type="submit" class="btn">Send Message</button>
+                                    <button type="submit" class="btn" onclick="sendMail()">Send Message</button>
                                 </div>
                             </div>
                         </div>
